fixed center aligned

--- a/My Webpage/startbootstrap-agency-gh-pages/css/agency.css
+++ b/My Webpage/startbootstrap-agency-gh-pages/css/agency.css
@@ -313,7 +313,7 @@ header.masthead .intro-text .intro-heading {
 
 .portfolio-modal .modal-content {
   padding: 100px 0;
-  text-align: center;
+  /*text-align: center;*/
 }
 
 .portfolio-modal .modal-content h2 {
@@ -442,8 +442,8 @@ header.masthead .intro-text .intro-heading {
   position: absolute;
   z-index: 100;
   left: 0;
-  width: 80px;
-  height: 80px;
+  width: 20px;
+  height: 20px;
   margin-left: 0;
   text-align: center;
   color: white;
@@ -512,8 +512,8 @@ header.masthead .intro-text .intro-heading {
   }
   .timeline > li .timeline-image {
     left: 50%;
-    width: 100px;
-    height: 100px;
+    width: 20px;
+    height: 20px;
     margin-left: -50px;
   }
   .timeline > li .timeline-image h4 {
@@ -728,7 +728,7 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
   width: 100%;
   height: 20px;
   margin-top: -12px;
-  text-align: center;
+  /*text-align: center;*/
   color: white;
 }
 
